# audio_led

./: CMakeLists.txt  CROSSCOMPILE_NOTES.md  Makefile  README.md  SIMULATION.md  audio_led.cpp  audio_led.service  build-simulation.sh  lua_api.cpp  lua_api.h  main.cpp  preset.json  start_audio_led.sh  start_ft-server.sh  structure.txt
cmake/: arm-toolchain.cmake
docs/: DEVELOPMENT.md  QUICK_START.md
effects/: run-preview.bat
effects/Whac-A-Tourist/: main.lua
effects/builtin/: effect_beat.h  effect_colorpulse.h  effect_colorwipe.h  effect_fire.h  effect_matrix.h  effect_plasma.h  effect_rain.h  effect_spectrum.h  effect_spectrum3d.h  effect_stars.h  effect_volume.h  effect_vu.h  effect_wave.h
effects/love-preview/: conf.lua  main.lua
effects/scripts/: bass_pulse.lua  colortest.lua  dancing_bars.lua  donkey.lua  fireblast.lua  geiss.lua  jumpnrun.lua  milkdrop.lua  oscilloscope.lua  pacman.lua  rainbow_bars.lua  spacewalk.lua  superscope.lua  tripex.lua  whacatourist.lua
effects/scripts/sprites/: captain.lua  captain_64.lua  deck.lua  m9v.lua  m9v_64.lua  stylo.lua  stylo_64.lua  whacatourist_sprites.lua
kissfft/: kiss_fft.c  kiss_fft.h
libs/: libasound2-dev_1.2.14-1+rpt1_arm64.deb  libasound2-dev_1.2.8-1+b1_arm64.deb  libasound2_1.2.8-1+b1_arm64.deb
scripts/: deploy-to-pi.sh  setup-wsl-cross-compile.sh
src/: audio_capture.cpp  audio_capture.h  effect.h  effect_manager.cpp  effect_manager.h  ft_sender.cpp  ft_sender.h  lua_effect.cpp  lua_effect.h  main.cpp  web_server.cpp  web_server.h
tools/PngToLua/: PngToLua.csproj  Program.cs
